[package]
name = "nucleo-h745zi"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"
description = "Board support crate for the STMicroelectronics Nucleo-H745zi development board"
repository = "https://github.com/antoinevg/nucleo-h745zi"
documentation = "https://github.com/antoinevg/nucleo-h745zi/wiki"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32",
    "stm32h7xx",
    "stm32h745",
]
readme = "README.md"

[package.metadata.docs.rs]
features = [ ]
targets = ["thumbv7em-none-eabihf"]


# - dependencies --------------------------------------------------------------

[dependencies]
cortex-m = "^0.7.1"
cortex-m-rt = { version = "^0.6.13" }
embedded-timeout-macros = { version = "0.3.0" }
heapless = { version = "^0.6.0", default_features = true }
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal.git", branch = "master", features = [ "stm32h747cm7", "rt", "ethernet" ] }

#[dependencies.stm32h7xx-hal]
#features = [ "stm32h747cm7", "rt", "ethernet" ]
#version = "0.8.0"
#git = "https://github.com/stm32-rs/stm32h7xx-hal.git"
#branch = "master"

# - optional dependencies -----------------------------------------------------

[dependencies.smoltcp]
version = "0.7.0"
#path = "../mirrors/smoltcp.git"
default-features = false
features = ["ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "socket-udp"]
#optional = true

# - dependencies for examples -------------------------------------------------

[dependencies.jacktrip]
path = "../jacktrip_rs.git"
default-features = false
optional = true

# - dev dependencies ----------------------------------------------------------

[dev-dependencies]
cfg-if = "1.0.0"
cortex-m-log = { version = "~0.7.0", features = ["itm", "semihosting", "log-integration"] }
cortex-m-semihosting = { version = "~0.3.5" }
lazy_static = { version = "~1.4.0", features = ["spin_no_std"] }
log = "0.4.14"
panic-halt = "0.2.0"
panic-itm = { version = "~0.4.2" }
panic-rtt-target = { version = "~0.1.1", features = ["cortex-m"] }
panic-semihosting = { version = "~0.5.3" }
rtt-target = { version = "~0.2.2", features = ["cortex-m"] }


# - features ------------------------------------------------------------------

[features]
default = []
log-semihosting = []
log-itm = []
log-rtt = []


# - profiles ------------------------------------------------------------------

[profile.dev]
#opt-level = 1  # default: 0
opt-level = "s" # optimize for binary size
#debug = true              # default: true
#debug-assertions = false  # default: true
#overflow-checks = false   # default: true
#lto = "off"               # default: false
#panic = "unwind"          # default: "unwind"
#incremental = false       # default: true

[profile.release]
debug = true
#opt-level = "s" #  optimize for binary size


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky_bsp"
required-features = []

[[example]]
name = "blinky_hal"
required-features = []

[[example]]
name = "blinky_pac"
required-features = []

#[[example]]
#name = "button"
#required-features = []

[[example]]
name = "ethernet"
required-features = []

[[example]]
name = "itm"
required-features = [ "log-itm" ]

[[example]]
name = "jacktrip"
required-features = [ "jacktrip" ]
