[package]
name = "nucleo-h7xx"
version = "0.2.1"
authors = [ "Antoine van Gelder <antoine@flowdsp.io>" ]
edition = "2018"
license = "MIT"
description = "Board support crate for the STMicroelectronics STM32H7 Nucleo-144 boards."
repository = "https://github.com/antoinevg/nucleo-h7xx"
documentation = "https://github.com/antoinevg/nucleo-h7xx/wiki"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "cortex-m",
    "bsp",
    "stm32",
    "stm32h7xx",
    "nucleo",
]
readme = "README.md"
exclude = [
    "testsuite/*",
    "openocd.cfg",
    "openocd.gdb",
]

[package.metadata.docs.rs]
features = []
targets = [ "thumbv7em-none-eabihf" ]


# - workspace -----------------------------------------------------------------

# TODO Workspace feature is blocked: https://github.com/rust-lang/cargo/issues/7004
#[workspace]
#members = [
#    "testsuite"
#]


# - features ------------------------------------------------------------------

[features]
default = []
ethernet = [ "stm32h7xx-hal/ethernet", "smoltcp" ]
button-1-pa0 = []  # SB81=on, SB82=off
led-1-pa5 = []     # SB65=on, SB54=off
log-semihosting = [ "cortex-m-semihosting" ]
log-itm = []
log-rtt = []


# - dependencies --------------------------------------------------------------

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.1" }
stm32h7xx-hal = { version = "0.13.0", features = [ "stm32h747cm7" ] }

embedded-timeout-macros = "0.3.0"
heapless = "0.7.16"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

# - optional dependencies

smoltcp = { version = "0.8.1", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
    "socket-udp"
], optional = true }
cortex-m-semihosting = { version = "0.5.0", optional = true }


# - dev dependencies ----------------------------------------------------------

[dev-dependencies]
cfg-if = "1.0.0"
cortex-m-log = { version = "0.7.0", features = [ "itm", "semihosting", "log-integration" ] }
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
log = "0.4.14"
panic-halt = "0.2.0"
panic-itm = { version = "0.4.2" }
panic-rtt-target = { version = "0.1.1", features = [ "cortex-m" ] }
panic-semihosting = { version = "0.6.0" }
rtt-target = { version = "0.3.1", features = [ "cortex-m" ] }


# - profiles ------------------------------------------------------------------

[profile.dev]

[profile.release]
debug = true


# - examples ------------------------------------------------------------------

[[example]]
name = "blinky"
required-features = []

[[example]]
name = "blinky_hal"
required-features = []

[[example]]
name = "blinky_pac"
required-features = []

[[example]]
name = "ethernet"
required-features = [ "ethernet" ]

[[example]]
name = "ethernet_hal"
required-features = [ "ethernet", "log-semihosting" ]

[[example]]
name = "itm"
required-features = [ "log-itm" ]
